--- a/index.html
+++ b/index.html
@@ -200,6 +200,13 @@
     <img src="Icons/IFRC-icons-colour_Emergency-health-stethoscope.png" alt="Strengthening Health Care" class="health-tab-icon">
     <span data-ar="تعزيز الرعاية الصحية" data-en="Strengthening Health Care"></span>
   </button>
+  <button class="health-sub-tab-btn" id="first-aid-referral-btn" role="tab"
+  aria-controls="first-aid-referral" aria-selected="false" tabindex="-1"
+  data-health-tab="first-aid-referral" data-ar="برنامج الإسعافات الأولية والإحالة" data-en="First Aid & Referral Program">
+  <img src="Icons/IFRC-icons-colour_Emergency-health-stethoscope.png" alt="First Aid & Referral" class="health-tab-icon">
+  <span data-ar="برنامج الإسعافات الأولية والإحالة" data-en="First Aid & Referral Program"></span>
+</button>
+
 </div>
 
 <!-- Health Overview Sub-Tab Content -->
@@ -395,6 +402,20 @@
 </div>
 </section>
 </div></div>
+<!-- First Aid & Referral Sub-Tab Content -->
+<div class="health-tab-content" id="first-aid-referral" role="tabpanel" aria-labelledby="first-aid-referral-btn">
+  <section class="first-aid-referral-section">
+    <div class="container">
+      <h3 data-ar="برنامج الإسعافات الأولية والإحالة" data-en="First Aid & Referral Program"></h3>
+      <p>
+        <span data-ar="يهدف هذا البرنامج إلى تقديم خدمات إسعافية سريعة وتحويل الحالات الحرجة إلى مراكز متخصصة." 
+              data-en="This program aims to provide rapid first aid and referral services for critical cases.">
+        </span>
+      </p>
+    </div>
+  </section>
+</div>
+
 <div class="sub-tab-content" id="sub-development" role="tabpanel" aria-labelledby="sub-development-btn">
 <section class="hero-stats sector-impact">
 <div class="container">
