--- a/index.html
+++ b/index.html
@@ -412,6 +412,59 @@
               data-en="This program aims to provide rapid first aid and referral services for critical cases.">
         </span>
       </p>
+      <!-- First Aid & Referral Sub-Tab Content -->
+<div class="health-tab-content" id="first-aid-referral" role="tabpanel" aria-labelledby="first-aid-referral-btn">
+  <section class="first-aid-referral-section">
+    <div class="container">
+      <h3 data-ar="برنامج الإسعافات الأولية والإحالة" data-en="First Aid & Referral Program"></h3>
+      <p>
+        يعد برنامج الإسعافات الأولية من البرامج الأساسية والمهمة التي ينفذها الهلال الأحمر اليمني حيث يسعى لتأهيل المجتمع لتقديم الإسعاف الاولي الميداني خصوصاً في أوقات الحروب والنزاعات المسلحة واثناء الكوارث الطبيعية.
+      </p>
+      <p>
+        نفذ البرنامج عددًا من الدورات التدريبية لتأهيل المتطوعين، والموظفين وكذلك المجتمع المحلي، كما يعمل على إحالة المرضى والجرحى إلى المستشفيات.
+      </p>
+
+      <h4>نظام الإحالة:</h4>
+      <p>عملت 88 سيارة إسعاف في الفروع على إحالة المرضى والجرحى إلى المستشفيات حيث كان عدد المستفيدين من هذه الخدمة 5,136 مستفيد، كما هو موضح أدناه:</p>
+
+      <div class="table-wrapper">
+        <table class="projects-table health-table">
+          <thead>
+            <tr>
+              <th>الفرع</th>
+              <th>عدد المستفيدين</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr><td>صنعاء الأمانة</td><td>109</td></tr>
+            <tr><td>تعز</td><td>301</td></tr>
+            <tr><td>عمران</td><td>187</td></tr>
+            <tr><td>البيضاء</td><td>111</td></tr>
+            <tr><td>مأرب</td><td>747</td></tr>
+            <tr><td>ذمار</td><td>190</td></tr>
+            <tr><td>الجوف</td><td>53</td></tr>
+            <tr><td>لحج</td><td>31</td></tr>
+            <tr><td>حجه</td><td>1034</td></tr>
+            <tr><td>شبوه</td><td>82</td></tr>
+            <tr><td>ابين</td><td>101</td></tr>
+            <tr><td>الضالع</td><td>180</td></tr>
+            <tr><td>إب</td><td>566</td></tr>
+            <tr><td>صعده</td><td>437</td></tr>
+            <tr><td>الحديدة</td><td>851</td></tr>
+            <tr><td>صنعاء المحافظة</td><td>109</td></tr>
+            <tr><td>صرف</td><td>47</td></tr>
+            <tr><td><strong>الإجمالي</strong></td><td><strong>5,136</strong></td></tr>
+          </tbody>
+        </table>
+      </div>
+
+      <p>
+        كما تم تنفيذ الاستجابة بنظام الإحالة الطبية لحالات الإسهالات المائية بالتنسيق مع اللجنة الدولية للصليب الأحمر في محافظة صعدة – لعدد 69 حالة.
+      </p>
+    </div>
+  </section>
+</div>
+
     </div>
   </section>
 </div>
