--- a/index.html
+++ b/index.html
@@ -206,6 +206,12 @@
   <img src="Icons/IFRC-icons-colour_Emergency-health-stethoscope.png" alt="First Aid & Referral" class="health-tab-icon">
   <span data-ar="برنامج الإسعافات الأولية والإحالة" data-en="First Aid & Referral Program"></span>
 </button>
+<button class="health-sub-tab-btn" id="first-aid-training-btn" role="tab"
+  aria-controls="first-aid-training" aria-selected="false" tabindex="-1"
+  data-health-tab="first-aid-training" data-ar="تدريبات الإسعافات الأولية" data-en="First Aid Trainings">
+  <img src="Icons/IFRC-icons-colour_Emergency-health-stethoscope.png" alt="First Aid Training" class="health-tab-icon">
+  <span data-ar="تدريبات الإسعافات الأولية" data-en="First Aid Trainings"></span>
+</button>
 
 </div>
 
@@ -452,6 +458,77 @@
       <p>
         كما تم تنفيذ الاستجابة بنظام الإحالة الطبية لحالات الإسهالات المائية بالتنسيق مع اللجنة الدولية للصليب الأحمر في محافظة صعدة – لعدد 69 حالة.
       </p>
+    </div>
+  </section>
+</div>
+<!-- First Aid Training Sub-Tab Content -->
+<div class="health-tab-content" id="first-aid-training" role="tabpanel" aria-labelledby="first-aid-training-btn">
+  <section class="first-aid-training-section">
+    <div class="container">
+      <h3 data-ar="تدريبات الإسعافات الأولية" data-en="First Aid Trainings"></h3>
+
+      <h4>تدريب المجتمعات المحلية:</h4>
+      <p>تم تدريب 5,286 مشارك / مشاركة من المجتمعات المحلية المختلفة في عدد من المحافظات على الإسعافات الأولية:</p>
+
+      <div class="table-wrapper">
+        <table class="projects-table health-table">
+          <thead>
+            <tr><th>الفرع</th><th>عدد المستفيدين</th></tr>
+          </thead>
+          <tbody>
+            <tr><td>أبين</td><td>100</td></tr>
+            <tr><td>الحديدة</td><td>109</td></tr>
+            <tr><td>عدن</td><td>125</td></tr>
+            <tr><td>حجة</td><td>433</td></tr>
+            <tr><td>لحج</td><td>100</td></tr>
+            <tr><td>أمانة العاصمة</td><td>2125</td></tr>
+            <tr><td>المهرة</td><td>220</td></tr>
+            <tr><td>ذمار</td><td>362</td></tr>
+            <tr><td>عمران</td><td>122</td></tr>
+            <tr><td>سيئون</td><td>100</td></tr>
+            <tr><td>تعز</td><td>75</td></tr>
+            <tr><td>شبوة</td><td>245</td></tr>
+            <tr><td>مأرب</td><td>100</td></tr>
+            <tr><td>الضالع</td><td>100</td></tr>
+            <tr><td>صعدة</td><td>200</td></tr>
+            <tr><td>صنعاء المحافظة</td><td>619</td></tr>
+            <tr><td>إب</td><td>140</td></tr>
+            <tr><td><strong>الإجمالي</strong></td><td><strong>5,286</strong></td></tr>
+          </tbody>
+        </table>
+      </div>
+
+      <h4>تدريب المتطوعين:</h4>
+      <p>تم تدريب 126 متطوع من الفروع التالية:</p>
+
+      <div class="table-wrapper">
+        <table class="projects-table health-table">
+          <thead>
+            <tr><th>الفرع</th><th>عدد المستفيدين</th></tr>
+          </thead>
+          <tbody>
+            <tr><td>الحديدة</td><td>106</td></tr>
+            <tr><td>صعدة</td><td>20</td></tr>
+            <tr><td><strong>الإجمالي</strong></td><td><strong>126</strong></td></tr>
+          </tbody>
+        </table>
+      </div>
+
+      <h4>توزيع كتيبات الإسعافات الأولية:</h4>
+      <p>تم توزيع 1,600 كتيب للإسعافات الأولية على 13 فرعًا.</p>
+
+      <h4>توزيع حقائب الإسعافات الأولية:</h4>
+      <div class="table-wrapper">
+        <table class="projects-table health-table">
+          <thead>
+            <tr><th>النوع</th><th>الجهات</th></tr>
+          </thead>
+          <tbody>
+            <tr><td>4,220 حقيبة إسعافية أولية</td><td>16 فرع من فروع الهلال الأحمر اليمني</td></tr>
+            <tr><td>384 حقيبة إسعافية أولية</td><td>جهات حكومية مختلفة</td></tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </section>
 </div>
