--- a/index.html
+++ b/index.html
@@ -212,6 +212,12 @@
   <img src="Icons/IFRC-icons-colour_Emergency-health-stethoscope.png" alt="First Aid Training" class="health-tab-icon">
   <span data-ar="تدريبات الإسعافات الأولية" data-en="First Aid Trainings"></span>
 </button>
+<button class="health-sub-tab-btn" id="cbhfa-program-btn" role="tab"
+  aria-controls="cbhfa-program" aria-selected="false" tabindex="-1"
+  data-health-tab="cbhfa-program" data-ar="CBHFA والصحة المجتمعية" data-en="CBHFA & Community Health">
+  <img src="Icons/IFRC-icons-colour_Community-engagement.png" alt="CBHFA Program" class="health-tab-icon">
+  <span data-ar="CBHFA والصحة المجتمعية" data-en="CBHFA & Community Health"></span>
+</button>
 
 </div>
 
@@ -533,6 +539,65 @@
   </section>
 </div>
 
+<!-- CBHFA Program Sub-Tab Content -->
+<div class="health-tab-content" id="cbhfa-program" role="tabpanel" aria-labelledby="cbhfa-program-btn">
+  <section class="cbhfa-section">
+    <div class="container">
+      <h3 data-ar="برنامج الصحة المجتمعية والإسعاف الأولي المجتمعي" data-en="CBHFA Program"></h3>
+
+      <!-- CBHFA Activities -->
+      <h4>أنشطة برنامج الصحة المجتمعية والإسعاف الأولي المجتمعي:</h4>
+      <div class="table-wrapper">
+        <table class="projects-table health-table">
+          <thead>
+            <tr>
+              <th>النشاط</th>
+              <th>المحافظة</th>
+              <th>عدد المستفيدين</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr><td>تنفيذ تدريب CBHFA لمتطوعي فرع الجوف</td><td>الجوف</td><td>20</td></tr>
+            <tr><td>جلسات ترويج صحي للطلاب</td><td>الجوف</td><td>29,000</td></tr>
+            <tr><td>جلسات ترويج صحي للمجتمعات والمخيمات والمدارس</td><td>تعز - المدينة</td><td>10,957</td></tr>
+            <tr><td>حملة الترويج للتبرع بالدم</td><td>تعز - المدينة</td><td>15,349</td></tr>
+            <tr><td>حملة اليوم العالمي للأوبئة (سوشيال ميديا)</td><td>—</td><td>10,000</td></tr>
+            <tr><td>نشاط الترصد المجتمعي (CBS)</td><td>لحج</td><td>10,343</td></tr>
+          </tbody>
+        </table>
+      </div>
+
+      <!-- HCID Activities -->
+      <h4>برنامج الرعاية الصحية في خطر (HCID):</h4>
+      <ul>
+        <li>ورشة عمل تنشيطية لـ 10 مدربين من عدة فروع.</li>
+        <li>ورشة عن بُعد لتقييم الأمن والسلامة بمشاركة 17 شخصًا لـ 8 مراكز صحية.</li>
+        <li>تدريب 161 عامل صحي في 7 محافظات على إدارة التوتر ومنع العنف في مؤسسات الرعاية الصحية.</li>
+      </ul>
+
+      <!-- Epidemics and Health Emergency -->
+      <h4>أنشطة الاستجابة للأوبئة والطوارئ الصحية:</h4>
+      <div class="table-wrapper">
+        <table class="projects-table health-table">
+          <thead>
+            <tr>
+              <th>النشاط</th>
+              <th>المحافظة</th>
+              <th>عدد المستفيدين</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr><td>مكافحة حمى الضنك والملاريا (الرش الضبابي)</td><td>الحديدة</td><td>500,000</td></tr>
+            <tr><td>الحد من انتشار وباء الكوليرا</td><td>حضرموت</td><td>600,566</td></tr>
+            <tr><td>الحد من الكوليرا</td><td>الضالع</td><td>13,000</td></tr>
+            <tr><td>الحد من الكوليرا</td><td>صعدة</td><td>9,000</td></tr>
+          </tbody>
+        </table>
+      </div>
+
+    </div>
+  </section>
+</div>
 
 <div class="sub-tab-content" id="sub-development" role="tabpanel" aria-labelledby="sub-development-btn">
 <section class="hero-stats sector-impact">
