--- a/index.html
+++ b/index.html
@@ -1033,7 +1033,15 @@
 </div>
 </section>
 </div>
- 
+<div class="sub-tab-content" id="sub-wash" role="tabpanel" aria-labelledby="sub-wash-btn">
+<section class="hero-stats sector-impact">
+<div class="container">
+<h2 class="section-title" data-ar="المياه والإسكان" data-en="Water & Shelter"></h2>
+<div class="stats-grid impact-grid" id="sectorWashGrid">
+</div>
+</div>
+</section>
+</div>
 </section>
 
 <!-- ================= CHARTS ================= -->
