--- a/index.html
+++ b/index.html
@@ -1041,6 +1041,14 @@
 </div>
 </div>
 </section>
+<div class="health-sub-tabs" role="tablist">
+    <button class="health-sub-tab-btn active" id="wash-overview-btn" role="tab"
+      aria-controls="wash-overview" aria-selected="true" tabindex="0"
+      data-health-tab="wash-overview" data-ar="نظرة عامة" data-en="Overview">
+      <img src="Icons/IFRC-icons-colour_Water-and-sanitation-WASH.png" alt="Water Overview" class="health-tab-icon">
+      <span data-ar="نظرة عامة" data-en="Overview"></span>
+    </button>
+  </div>
 </div>
 </section>
 
