--- a/index.html
+++ b/index.html
@@ -1041,11 +1041,11 @@
 </div>
 </div>
 </section>
-<div class="health-sub-tabs" role="tablist">
-    <button class="health-sub-tab-btn active" id="wash-overview-btn" role="tab"
+<div class="wash-sub-tabs" role="tablist">
+    <button class="wash-overview-btn active" id="wash-overview-btn" role="tab"
       aria-controls="wash-overview" aria-selected="true" tabindex="0"
       data-health-tab="wash-overview" data-ar="نظرة عامة" data-en="Overview">
-      <img src="Icons/IFRC-icons-colour_Water-and-sanitation-WASH.png" alt="Water Overview" class="health-tab-icon">
+      <img src="Icons/IFRC-icons-colour_Water-and-sanitation-WASH.png" alt="Water Overview" class="wash-tab-icon">
       <span data-ar="نظرة عامة" data-en="Overview"></span>
     </button>
   </div>
